@@ -1,5 +1,9 @@
 2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
+	* mi-index.el (mode-info-search-info-files): Check whether
+	directory exists before `directory-files' is called.
+	(mode-info-regexp-opt): Install workaround to avoid shy-grouping.
+
 	* mi-emacs.el (mode-info-emacs-titles): Change its default.
 
 	* mi-elisp.el (mode-info-elisp-titles): Change its default.
